fix overflow in gallery

--- a/css/contacts.css
+++ b/css/contacts.css
@@ -127,11 +127,11 @@ footer {
   background-color: black;
   border: none;
   color: white;
-  padding: 15px 32px;
+  padding: 15px 28px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
+  font-size: 14px;
   margin: 4px 2px;
   cursor: pointer;
 }
